Fix alignment of columns on about page

--- a/assets/css/_sass/_about.scss
+++ b/assets/css/_sass/_about.scss
@@ -69,6 +69,7 @@ del.websites:after {
 }
 
 .we-are {
+    clear: both;
     padding:0px 0 40px 0;
 }
 
